--- a/shades.html
+++ b/shades.html
@@ -13,16 +13,16 @@
 	<div class="mainBox"></div>
 </h1>
 	<div id="pallet">
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
+			<span class="box"></span>
+			<span class="box"></span>
+			<span class="box"></span>
+			<span class="box"></span>
+			<span class="box"></span>
+			<span class="box"></span>
+			<span class="box"></span>
+			<span class="box"></span>
+			<span class="box"></span>
+			<span class="box"></span>
     </div>
 
 <script type="text/javascript" src="shades.js"></script>
